fix overflow

--- a/interaNotes/css/stylesheet.css
+++ b/interaNotes/css/stylesheet.css
@@ -7,6 +7,7 @@ body {
 
 .container-fluid {
     background-color: #ededed;
+    overflow: hidden;
 }
 
 /* Header */
